fixed popover z-index

--- a/app/assets/sass/settings/_variables.scss
+++ b/app/assets/sass/settings/_variables.scss
@@ -322,7 +322,7 @@ $dropdown-caret-color: #000;
 
 $zindex-navbar: 1000;
 $zindex-dropdown: 1000;
-$zindex-popover: 1060;
+$zindex-popover: 3;
 $zindex-tooltip: 1070;
 $zindex-navbar-fixed: 1030;
 $zindex-modal-background: 1040;
